--- a/CityDuma/Views/MembersView.xaml
+++ b/CityDuma/Views/MembersView.xaml
@@ -37,7 +37,7 @@
             <!-- Action Buttons -->
             <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
                 <Button Content="Добавить" Command="{Binding AddCommand}" Width="100" Margin="5" />
-                <Button Content="Сохранить" Command="{Binding SaveChanges}" Width="100" Margin="5" />
+                <Button Content="Сохранить" Command="{Binding SaveChangesCommand}" Width="100" Margin="5" />
                 <Button Content="Удалить" Command="{Binding DeleteCommand}" Width="100" Margin="5" />
             </StackPanel>
         </Grid>
