--- a/CityDuma/Views/CommissionMembersView.xaml
+++ b/CityDuma/Views/CommissionMembersView.xaml
@@ -33,10 +33,10 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <ComboBox ItemsSource="{Binding DataContext.Commissions, RelativeSource={RelativeSource AncestorType=Page}}"
-                                          SelectedItem="{Binding SelectedMember.Commission, Mode=TwoWay}"
+                                          SelectedItem="{Binding Commission, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                                           DisplayMemberPath="Direction"
-                                          SelectedValuePath="CodeMembersCommission"
                                           Width="150" />
+
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
