--- a/CityDuma/Views/CommissionMembersView.xaml
+++ b/CityDuma/Views/CommissionMembersView.xaml
@@ -7,8 +7,6 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="CommissionMembersView">
-
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -40,7 +38,6 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn DisplayMemberBinding="{Binding Commission.Direction}"/>
                 </GridView>
             </ListView.View>
         </ListView>
@@ -48,9 +45,8 @@
         <StackPanel Orientation="Horizontal" Grid.Row="2" HorizontalAlignment="Right">
             <Button Content="Сохранить"
                     Command="{Binding SaveChangesCommand}"
-                    Margin="10" Width="120">
+                    Margin="10" Width="120"/>
 
-            </Button>
             <Button Content="Удалить"
                     Command="{Binding DeleteMemberCommand}"
                     HorizontalAlignment="Right"
