--- a/CityDuma/Views/CommissionsView.xaml
+++ b/CityDuma/Views/CommissionsView.xaml
@@ -22,7 +22,7 @@
                    FontWeight="Bold" 
                    Margin="0,20,0,0"/>
 
-        <ListView x:Name="dataGrid" Grid.Row="1" ItemsSource="{Binding Commissions}" SelectedItem="{Binding SelectedCommission}">
+        <ListView Grid.Row="1" ItemsSource="{Binding Commissions}" SelectedItem="{Binding SelectedCommission}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Направление" Width="220">
@@ -78,7 +78,6 @@
 
             <Button Content="Удалить"
                     Command="{Binding DeleteCommissionCommand}"
-                    IsEnabled="{Binding SelectedCommission}"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Bottom"
                     Margin="10,0,10,10"
